# OPPL1T2_Project

./: CMakeLists.txt  README.md  sentinel_report.html
include/: FileModificationTechnique.h  HtmlReporter.h  IExecutor.h  IReporter.h  ITechnique.h  LocalExecutor.h  NetworkScanTechnique.h  PlaybookEngine.h  ProcessEnumTechnique.h  RemoteSSHExecutor.h  ShellTechnique.h  TechniqueFactory.h  UserEnumTechnique.h
playbooks/: detection_test.yaml  linux_recon.yaml  my_custom.yaml  windows_recon.yaml
src/: CMakeCache.txt  CMakeLists.txt  FileModificationTechnique.cpp  HtmlReporter.cpp  LocalExecutor.cpp  NetworkScanTechnique.cpp  PlaybookEngine.cpp  ProcessEnumTechnique.cpp  RemoteSSHExecutor.cpp  ShellTechnique.cpp  TechniqueFactory.cpp  UserEnumTechnique.cpp  main.cpp
